@@ -1,7 +1,7 @@
 Package: RcppArmadillo
 Type: Package
-Title: Rcpp/Armadillo translation layer
-Version: 0.1.0.4
+Title: Rcpp/Armadillo bridge
+Version: 0.1.0.5
 Date: $Date$
 Author: Romain Francois, Dirk Eddelbuettel and Doug Bates
 Maintainer: Romain, Dirk and Doug <RcppArmadillo-authors@r-enthusiasts.com>
@@ -27,7 +27,7 @@ Description: R and Armadillo integration using Rcpp
  capabilities of the Rcpp package for seamless R and C++ integration/
 License: GPL (>= 2)
 LazyLoad: yes
-Depends: Rcpp (>= 0.7.12.6)
+Depends: R (>= 2.10.0), Rcpp (>= 0.7.12.11)
 LinkingTo: Rcpp
 SystemRequirements: GNU make
 URL: http://arma.sourceforge.net/, http://dirk.eddelbuettel.com/code/rcpp.html, http://romainfrancois.blog.free.fr/index.php?category/R-package/RcppArmadillo
