@@ -1,0 +1,5 @@
+
+rcpparma_hello_world <- function(){
+	.Call( "rcpparma_hello_world", PACKAGE = "@PKG@" )
+}
+
