@@ -1,3 +1,15 @@
+2010-05-04   Romain Francois <romain@r-enthusiasts.com>
+
+	* R/RcppArmadillo.package.skeleton.R: new package skeleton function
+	similar to Rcpp::Rcpp.package.skeleton but targetting
+	use of RcppArmadillo
+	
+	* README: removed and promoted to additional documentation in ?RcppArmadillo
+
+2010-05-03  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/* : update to armadillo 0.9.6
+
 2010-04-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Remove OS_type restriction now that RcppArmadillo
